<resources>
    <string name="app_name">Login</string>
    <string name="google_app_id">1070829811622</string>
    <string name="google_app_id2">login-2f864</string>
    <string name="google_client_id">1070829811622-eakp6fnetle1q32u08u7hkt4rp2iis75.apps.googleusercontent.com</string>
    <string name="google_client_id2">1070829811622-r6t9p1l1rcl0csomoi23q3g3nrt6t0oe.apps.googleusercontent.com</string>
    <string name="Client_Secret">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</string>
    <string name="email">email</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="loguot">Loguot</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_here">Sign Here</string>
    <string name="password">password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="cancel">Cancel</string>
</resources>